Project

General

Profile

Actions

Bug #15318

closed

rgw: fails to delete keys with two underscores

Added by Orit Wasserman about 8 years ago. Updated about 8 years ago.

Status:
Resolved
Priority:
Immediate
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
Yes
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Create a bucket with keys:"_ " and "_"

delete the keys, after the delete the keys still exist and you cannot delete the bucket


Related issues 1 (0 open1 closed)

Has duplicate rgw - Bug #15881: rgw: radosgw-admin bucket rm fail to delete object that begining with double underscoresDuplicatePritha Srivastava

Actions
Actions #1

Updated by Orit Wasserman about 8 years ago

it look like we get -ENOENT when try to remove the object:
<cls> ceph/src/cls/rgw/cls_rgw.cc:2009: ERROR: rgw_obj_remove(): cls_cxx_remove returned -2

Actions #2

Updated by Orit Wasserman about 8 years ago

  • Regression changed from No to Yes
Actions #3

Updated by Sage Weil about 8 years ago

  • Priority changed from High to Urgent
Actions #4

Updated by Sage Weil about 8 years ago

  • Priority changed from Urgent to Immediate
Actions #5

Updated by Nathan Cutler about 8 years ago

Does this bug exist in hammer as well? If so, maybe worth backporting.

Actions #6

Updated by Orit Wasserman about 8 years ago

I could not reproduce it in hammer so no need to backport

Actions #7

Updated by Robin Johnson about 8 years ago

  • Release set to jewel
Actions #9

Updated by Orit Wasserman about 8 years ago

  • Status changed from New to Fix Under Review
  • Affected Versions sprint added
Actions #10

Updated by Orit Wasserman about 8 years ago

  • Status changed from Fix Under Review to Resolved
Actions #11

Updated by Konstantin Shalygin 25 days ago

  • Has duplicate Bug #15881: rgw: radosgw-admin bucket rm fail to delete object that begining with double underscores added
Actions

Also available in: Atom PDF