rgw: fix problem deleting objects begining with double underscore

Fixes: http://tracker.ceph.com/issues/15318

Signed-off-by: Orit Wasserman <owasserm@redhat.com>